# roscpp-nodewrap

./: CMakeLists.txt  LICENSE  README.md  changelog
roscpp_nodewrap/: CMakeLists.txt  package.xml
roscpp_nodewrap/include/roscpp_nodewrap/: AdvertiseConfigOptions.h  AdvertiseParamOptions.h  AdvertiseParamOptions.tpp  AsyncWorker.h  ConfigClient.h  ConfigClient.tpp  ConfigClientOptions.h  ConfigServer.h  ConfigServer.tpp  Console.h  Exceptions.h  Forwards.h  Managed.h  Managed.tpp  Manager.h  Manager.tpp  Node.h  Node.tpp  NodeImpl.h  NodeImpl.tpp  NodeInterface.h  Nodelet.h  Nodelet.tpp  Param.h  Param.tpp  ParamCallbackHelper.h  ParamCallbackHelper.tpp  ParamClient.h  ParamClient.tpp  ParamClientCallbacks.h  ParamClientCallbacks.tpp  ParamClientHelper.h  ParamClientHelper.tpp  ParamClientOptions.h  ParamClientOptions.tpp  ParamServer.h  ParamServer.tpp  ParamServerCallbacks.h  ParamServerCallbacks.tpp  ParamServerHelper.h  (+40 more)
roscpp_nodewrap/include/roscpp_nodewrap/boost/accumulators/: accumulators.hpp  accumulators_fwd.hpp  statistics.hpp  statistics_fwd.hpp
roscpp_nodewrap/include/roscpp_nodewrap/boost/accumulators/framework/: accumulator_base.hpp  accumulator_set.hpp  depends_on.hpp  external.hpp  extractor.hpp  features.hpp
roscpp_nodewrap/include/roscpp_nodewrap/boost/accumulators/numeric/: functional.hpp
roscpp_nodewrap/include/roscpp_nodewrap/boost/accumulators/statistics/: count.hpp  covariance.hpp  density.hpp  error_of.hpp  error_of_mean.hpp  extended_p_square.hpp  extended_p_square_quantile.hpp  kurtosis.hpp  max.hpp  mean.hpp  median.hpp  min.hpp  moment.hpp  p_square_cumul_dist.hpp  p_square_cumulative_distribution.hpp  p_square_quantile.hpp  peaks_over_threshold.hpp  pot_quantile.hpp  pot_tail_mean.hpp  rolling_count.hpp  rolling_mean.hpp  rolling_moment.hpp  rolling_sum.hpp  rolling_variance.hpp  rolling_window.hpp  skewness.hpp  stats.hpp  sum.hpp  sum_kahan.hpp  tail.hpp  tail_mean.hpp  tail_quantile.hpp  tail_variate.hpp  tail_variate_means.hpp  variance.hpp  weighted_covariance.hpp  weighted_density.hpp  weighted_extended_p_square.hpp  weighted_kurtosis.hpp  (+15 more)
roscpp_nodewrap/include/roscpp_nodewrap/diagnostics/: CompositeTask.h  CyclicEventTask.h  CyclicEventTask.tpp  DiagnosticTask.h  DiagnosticTaskManager.h  DiagnosticTaskManager.tpp  DiagnosticTaskOptions.h  DiagnosticUpdater.h  DiagnosticUpdater.tpp  DiagnosticsExceptions.h  DiagnosticsForwards.h  FrequencyTask.h  FrequencyTaskOptions.h  FunctionTask.h  FunctionTaskOptions.h  LatencyTask.h  LatencyTaskOptions.h  MessageLatencyTask.h  MessageLatencyTask.tpp  MessageStampFrequencyTask.h  MessageStampFrequencyTask.tpp  PeriodTask.h  PeriodTaskOptions.h  PublisherStatusTask.h  PublisherStatusTaskOptions.h  ServiceClientStatusTask.h  ServiceClientStatusTaskOptions.h  ServiceServerStatusTask.h  ServiceServerStatusTaskOptions.h  StatefulFrequencyTask.h  StatisticsTask.h  StatisticsTask.tpp  StatisticsTaskOptions.h  StatisticsTaskOptions.tpp  SubscriberStatusTask.h  SubscriberStatusTaskOptions.h  WorkerStatusTask.h  WorkerStatusTaskOptions.h
roscpp_nodewrap/include/roscpp_nodewrap/statistics/: CyclicEventStatistics.h  CyclicEventStatistics.tpp  FrequencyStatistics.h  LatencyStatistics.h  LatencyStatistics.tpp  PeriodStatistics.h  Statistics.h  Statistics.tpp
roscpp_nodewrap/include/roscpp_nodewrap/timer/: Timer.h  TimerForwards.h  TimerInfo.h  TimerManager.h  TimerQueueCallback.h
roscpp_nodewrap/include/roscpp_nodewrap/worker/: AsyncWorker.h  SyncWorker.h  Worker.h  WorkerEvent.h  WorkerExceptions.h  WorkerForwards.h  WorkerImpl.h  WorkerManager.h  WorkerOptions.h  WorkerQueueCallback.h
roscpp_nodewrap/src/: AdvertiseConfigOptions.cpp  AdvertiseParamOptions.cpp  AsyncWorker.cpp  CompositeTask.cpp  ConfigClient.cpp  ConfigClientOptions.cpp  ConfigServer.cpp  CyclicEventStatistics.cpp  DiagnosticTask.cpp  DiagnosticTaskManager.cpp  DiagnosticTaskOptions.cpp  DiagnosticUpdater.cpp  DiagnosticsExceptions.cpp  Exceptions.cpp  FrequencyStatistics.cpp  FrequencyTask.cpp  FrequencyTaskOptions.cpp  FunctionTask.cpp  FunctionTaskOptions.cpp  LatencyStatistics.cpp  LatencyTask.cpp  LatencyTaskOptions.cpp  MessageLatencyTask.cpp  MessageStampFrequencyTask.cpp  NodeImpl.cpp  Param.cpp  ParamCallbackHelper.cpp  ParamClient.cpp  ParamClientCallbacks.cpp  ParamClientHelper.cpp  ParamClientOptions.cpp  ParamServer.cpp  ParamServerCallbacks.cpp  ParamServerHelper.cpp  ParamServerOptions.cpp  ParamServiceHelper.cpp  ParamType.cpp  PeriodStatistics.cpp  PeriodTask.cpp  PeriodTaskOptions.cpp  (+36 more)
roscpp_nodewrap/srv/: FindParam.srv  GetParamInfo.srv  GetParamName.srv  GetParamValueBool.srv  GetParamValueDouble.srv  GetParamValueInt.srv  GetParamValueString.srv  GetParamValueXml.srv  HasParam.srv  HasWorker.srv  ListParams.srv  ListWorkers.srv  SetParamValueBool.srv  SetParamValueDouble.srv  SetParamValueInt.srv  SetParamValueString.srv  SetParamValueXml.srv
roscpp_nodewrap_msgs/: CMakeLists.txt  package.xml
roscpp_nodewrap_msgs/msg/: FrequencyEstimates.msg  LatencyEstimates.msg  PeriodEstimates.msg
roscpp_nodewrap_msgs/srv/: GetWorkerFrequency.srv  GetWorkerState.srv
roscpp_nodewrap_tutorial/: CMakeLists.txt  nodelet_plugins.xml  package.xml
roscpp_nodewrap_tutorial/config/: alice.yaml  arthur.yaml  bob.yaml  chatter_analyzers.yaml  marvin.yaml  maya.yaml  maya_analyzers.yaml  params.yaml  worker_analyzers.yaml
roscpp_nodewrap_tutorial/include/roscpp_nodewrap_tutorial/: ChatterNode.h  ParamAdvertiserNode.h  ParamClientNode.h  ParamListenerNode.h  ParamServerNode.h  WorkerNode.h
roscpp_nodewrap_tutorial/launch/: chatter_nodelets.launch  chatter_nodes.launch  chatter_supernode.launch  param_advertiser_node.launch  param_listener_node.launch  param_nodelets.launch  param_nodes.launch  worker_node.launch  worker_nodelet.launch
roscpp_nodewrap_tutorial/src/: ChatterNode.cpp  ParamAdvertiserNode.cpp  ParamClientNode.cpp  ParamListenerNode.cpp  ParamServerNode.cpp  WorkerNode.cpp  chatter_supernode.cpp  param_advertiser_node.cpp  param_client_node.cpp  param_listener_node.cpp  param_server_node.cpp  worker_node.cpp
(+38 files in other folders)
