<package>
  <name>roscpp_nodewrap</name>
  <version>0.1.0</version>
  <description>
    C++ implementation of ROS node(let) wrappers (library and development headers)
  </description>
  <author>Ralf Kaestner</author>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/ethz-asl/roscpp-nodewrap</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp_nodewrap_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp_nodewrap_msgs</run_depend>
</package>
